# oportunidades-perioidstas-latam

./: .gitignore  README.md  _quarto.yml  custom.scss  index.qmd  pyproject.toml  style.css
docs/: index.html  search.json
docs/pages/: directorio.html  pasadas.html  recursos.html
docs/site_libs/bootstrap/: bootstrap.min.css
pages/: directorio.qmd  pasadas.qmd  recursos.qmd
