[tool.poetry]
name = "oportunidades_periodistas_latam"
version = "0.1.0"
description = "Sitio web para difundir oportunidades para periodistas en Latinoamérica"
authors = ["Fer Aguirre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.0.3"
nbformat = "^5.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
